--- a/Prototype/index.html
+++ b/Prototype/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <xmeta http-equiv="refresh" content="1">
-        <meta charset="utf-8">
+    <meta xhttp-equiv="refresh" content="1">
+    <meta charset="utf-8">
 
-        <link rel="stylesheet" href="main.css">
-        <script src="elt.js"></script>
-        <script src="game.js"></script>
-        <script src="cards.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <script src="elt.js"></script>
+    <script src="game.js"></script>
+    <script src="cards.js"></script>
 </head>
 
 <body>
@@ -19,10 +19,13 @@
             <div class="buff">peace-of-mind</div>
         </div>
         <div class="card">
-            <img class="card-image"></img>
+            <div class="card-image"><img></img>
+            </div>
             <div class="card-content">
                 <div class="card-title">Lorem</div>
-                <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero dolores veritatis labore deleniti, aspernatur hic natus quas repellat voluptas autem impedit mollitia, ad reprehenderit. At voluptates quisquam necessitatibus fuga rem.</div>
+                <div class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero dolores veritatis labore deleniti, aspernatur
+                    hic natus quas repellat voluptas autem impedit mollitia, ad reprehenderit. At voluptates quisquam necessitatibus
+                    fuga rem.</div>
             </div>
         </div>
         <div class="options">
